--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^7.2.5",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-file-include": "^2.0.1",
     "gulp-postcss": "^7.0.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-rename": "^1.2.3",
+    "gulp-sass": "^3.2.1",
+    "gulp-uglify": "^3.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "gulp-babel": "^7.0.1"
   }
 }
